# ctmm

./: CMakeLists.txt  README.md  main.c  tmm_absorp_fn.c  tmm_absorp_fn.h  tmm_coherent.c  tmm_coherent.h  tmm_core.c  tmm_core.h  tmm_math.c  tmm_math.h  tmm_util.c  tmm_util.h
data/nk/: aluminum-McPeak.csv  silver-Johnson.csv
examples/: count_lines_datafile.c  directional_reflectivity.c  example1.c  examples_template.c  inc_group_layers.c  read_datafile.c  spectral_reflectivity.c
src/: tmm_absorp_fn.c  tmm_absorp_fn.h  tmm_coherent.c  tmm_coherent.h  tmm_core.c  tmm_core.h  tmm_incoherent.c  tmm_incoherent.h  tmm_logging.c  tmm_logging.h  tmm_math.c  tmm_math.h  tmm_util.c  tmm_util.h
